CDK RestApi with proxy integration
